testsuite/deprecated/veronac/codegen/compile-fail/main-bad-return-type.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class Main {
  // CHECK-L: main-bad-return-type.verona:${LINE:+1}:3: error: Method 'main' has an invalid signature
  main(): U64 { 0 }
}
